Fixed slider alignment in multiple account card

--- a/src/styles/common/slider.css
+++ b/src/styles/common/slider.css
@@ -12,7 +12,6 @@
 .switch-container {
   position: relative;
   display: inline-block;
-  bottom: -30px;
   width: 57px;
   height: 30px;
 }
@@ -26,10 +25,6 @@
   z-index: 100;
   top: 0;
   left: 0;
-}
-
-.slider_stick .switch-container{
-  bottom: initial;
 }
 
 .switch {
